# consumer_app_research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PHASE1.md  README.md  agent.py  compile_rich.py  main.py  mcp_server.py  phase2.py  phase3.py  phase3_sectional.py  pyproject.toml
configs/: test.json
research/astrology-india/: config.json  report_draft.md
research/companion-apps/: config.json  config_2026-03-24_19-04-24.json  config_2026-03-25_00-00-00.json  report.html  report.md
research/companion-apps/sections/: section_01.md  section_02.md  section_03.md  section_04.md  section_05.md  section_06.md  section_07.md
tools/: app_store.py  china_search.py  google_trends.py  meta_ads.py  meta_ads_runner.py  meta_ads_scraper.py  play_store.py  reddit.py  trustpilot.py  web_search.py  youtube.py
